--- a/mystle.css
+++ b/mystle.css
@@ -4,6 +4,29 @@ Version 1.0  - 04/10/2020
 Edited: PWcodigo
 */
 
+body{
+    --primary: 25,91,255;
+    --color: 44,62,80;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height: 100vh;
+    background: #F4F7F8;
+    height: calc(var(--vh, 1vh)*100);
+    color: rgb(var(--color));
+    width: 100%;
+    height: 100vh;
+}
+
+*{
+    list-style: none;
+    outline: none;
+    padding: 0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
 .con-input{
     position: relative;
     display:flex;
@@ -20,17 +43,6 @@ input{
     min-width: 250px;
 }
 
-.check{
-    color: #3aba6f;
-    text-shadow: 0px 5px 10px
-    rgba(58,186,111,.3);
-}
-
-.x{
-    color: rgb(240, 90, 92);
-    text-shadow: 0px 5px 10px
-    rgba(240,90,92,.3);
-}
 input.valid ~ .icons .check{
     opacity: 1;
     visibility: visible;
@@ -41,15 +53,6 @@ input.valid ~ .icons .check{
     opacity:1;
     visibility: visible;
     transform: scale(1);
-}
-
-i{
-    position: absolute;
-    transition: all .25s ease;
-    font-size: 1.3rem;
-    opacity: 0;
-    visibility: hidden;
-    transform: scale(.5);
 }
 
 .icons{
@@ -64,6 +67,27 @@ i{
     transition: all .25s ease;
 }
 
+
+i{
+    position: absolute;
+    transition: all .25s ease;
+    font-size: 1.3rem;
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(.5);
+}
+
+.check{
+    color: #3aba6f;
+    text-shadow: 0px 5px 10px
+    rgba(58,186,111,.3);
+}
+
+.x{
+    color: rgb(240, 90, 92);
+    text-shadow: 0px 5px 10px
+    rgba(240,90,92,.3);
+}
 input:focus{
     transform: translate(0, -6px);
     box-shadow: 0px 15px 25px 0px rgba(0,0,0,.09);
