--- a/mystle.css
+++ b/mystle.css
@@ -26,7 +26,14 @@ body{
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
+
+.titulo{
+    font-family: 'Poppins', sans-serif;
+    padding:15px;
+}
+
 .con-input{
     position: relative;
     display:flex;
@@ -37,7 +44,7 @@ input{
     padding: 11px 15px;
     border-radius: 25px;
     border: 0px;
-    box-shadow: 0px 80px 25px 0px
+    box-shadow: 0px 8px 25px 0px
     rgba(0,0,0,.05);
     transition: all .25s ease;
     min-width: 250px;
@@ -49,7 +56,7 @@ input.valid ~ .icons .check{
     transform: scale(1);
 }
 
-.input.invalid ~ icons .x{
+input.invalid ~ .icons .x{
     opacity:1;
     visibility: visible;
     transform: scale(1);
@@ -88,6 +95,7 @@ i{
     text-shadow: 0px 5px 10px
     rgba(240,90,92,.3);
 }
+
 input:focus{
     transform: translate(0, -6px);
     box-shadow: 0px 15px 25px 0px rgba(0,0,0,.09);
